feat(auth): Complete Verify Email
